--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^5.20.6",
     "i18next": "^23.15.1",
     "next": "14.2.12",
+    "prettier": "^3.5.3",
     "react": "^18",
     "react-dom": "^18",
     "redux-toolkit": "^1.1.2"
