--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.2.0",
     "react-i18next": "^15.4.1",
     "react-redux": "^9.2.0",
+    "sass": "^1.86.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
